--- a/Pillo/Base.lproj/Main.storyboard
+++ b/Pillo/Base.lproj/Main.storyboard
@@ -37,24 +37,26 @@
                                     <constraint firstAttribute="width" secondItem="9D5-GK-Iyn" secondAttribute="height" multiplier="1:1" id="dLu-Au-2eT"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" translatesAutoresizingMaskIntoConstraints="NO" id="6a1-75-4Wh">
-                                <rect key="frame" x="145.5" y="563" width="84" height="84"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcM-ub-R3z">
+                                <rect key="frame" x="150.5" y="573" width="74" height="74"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="84" id="gbB-Vm-Erf"/>
-                                    <constraint firstAttribute="height" constant="84" id="xge-fU-VeC"/>
+                                    <constraint firstAttribute="width" constant="74" id="WI2-9Q-2G2"/>
+                                    <constraint firstAttribute="height" constant="74" id="d1a-hX-j6e"/>
                                 </constraints>
-                            </imageView>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" image="hang-up"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="9D5-GK-Iyn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="84" id="1b1-iu-rWh"/>
+                            <constraint firstItem="gcM-ub-R3z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2VI-Gf-8b5"/>
                             <constraint firstItem="wik-g1-Y5a" firstAttribute="top" secondItem="hpa-Ae-Wkt" secondAttribute="bottom" constant="8" id="4FC-vD-VgN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6a1-75-4Wh" secondAttribute="bottom" constant="20" id="WzX-rf-rf5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9D5-GK-Iyn" secondAttribute="trailing" constant="84" id="fdS-9Z-siC"/>
                             <constraint firstItem="9D5-GK-Iyn" firstAttribute="top" secondItem="wik-g1-Y5a" secondAttribute="bottom" constant="20" id="qSf-ZH-uGb"/>
-                            <constraint firstItem="6a1-75-4Wh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qdH-g3-jys"/>
                             <constraint firstItem="wik-g1-Y5a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r6H-sW-bLf"/>
                             <constraint firstItem="hpa-Ae-Wkt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tBq-b5-Bg4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gcM-ub-R3z" secondAttribute="bottom" constant="20" id="xQi-O3-phz"/>
                             <constraint firstItem="hpa-Ae-Wkt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="znw-xW-n9J"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -87,9 +89,9 @@
                                     <constraint firstAttribute="width" constant="24" id="93p-tp-77K"/>
                                     <constraint firstAttribute="height" constant="24" id="z47-x8-vRX"/>
                                 </constraints>
-                                <state key="normal" image="iconfinder_12_-_Plus_1815561"/>
+                                <state key="normal" image="add"/>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i9v-Wn-IaG">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i9v-Wn-IaG">
                                 <rect key="frame" x="16" y="96.5" width="343" height="570.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -107,24 +109,44 @@
                                                         <constraint firstAttribute="width" constant="44" id="Vyv-hw-Nbl"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="friend name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cF0-p2-Ibr">
-                                                    <rect key="frame" x="76" y="23" width="90" height="19"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="friend name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cF0-p2-Ibr">
+                                                    <rect key="frame" x="76" y="13.5" width="90" height="19"/>
                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                                     <color key="textColor" red="0.082352941176470587" green="0.082352941176470587" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ohs-fi-nm0">
+                                                    <rect key="frame" x="76" y="35.5" width="63.5" height="16"/>
+                                                    <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
+                                                    <color key="textColor" red="0.47843137254901957" green="0.53725490196078429" blue="0.56862745098039214" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone-big" translatesAutoresizingMaskIntoConstraints="NO" id="PNT-ni-Oym">
+                                                    <rect key="frame" x="298" y="17.5" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="6zq-SL-9hw"/>
+                                                        <constraint firstAttribute="width" constant="30" id="Fwj-cL-gr2"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="cF0-p2-Ibr" firstAttribute="top" secondItem="VEw-RC-i2Q" secondAttribute="top" priority="999" constant="3" id="11X-NM-wqC"/>
                                                 <constraint firstItem="VEw-RC-i2Q" firstAttribute="leading" secondItem="YSO-lA-GiK" secondAttribute="leading" constant="16" id="4Ic-s3-ain"/>
+                                                <constraint firstItem="cF0-p2-Ibr" firstAttribute="centerY" secondItem="VEw-RC-i2Q" secondAttribute="centerY" priority="200" identifier="friendNameCenterY" id="7V2-ok-gqd"/>
+                                                <constraint firstItem="Ohs-fi-nm0" firstAttribute="leading" secondItem="VEw-RC-i2Q" secondAttribute="trailing" constant="16" id="AgO-Fz-9Mv"/>
+                                                <constraint firstItem="Ohs-fi-nm0" firstAttribute="bottom" secondItem="VEw-RC-i2Q" secondAttribute="bottom" constant="-3" id="Cq3-jG-09N"/>
+                                                <constraint firstItem="PNT-ni-Oym" firstAttribute="trailing" secondItem="YSO-lA-GiK" secondAttribute="trailingMargin" id="JjN-5H-3Y2"/>
                                                 <constraint firstItem="VEw-RC-i2Q" firstAttribute="centerY" secondItem="YSO-lA-GiK" secondAttribute="centerY" id="K1Y-1Z-QF9"/>
-                                                <constraint firstItem="cF0-p2-Ibr" firstAttribute="centerY" secondItem="YSO-lA-GiK" secondAttribute="centerY" id="XNs-rY-eaC"/>
-                                                <constraint firstItem="cF0-p2-Ibr" firstAttribute="leading" secondItem="VEw-RC-i2Q" secondAttribute="trailing" constant="16" id="jkQ-BS-NIv"/>
+                                                <constraint firstItem="PNT-ni-Oym" firstAttribute="centerY" secondItem="YSO-lA-GiK" secondAttribute="centerY" id="fsB-Du-80U"/>
+                                                <constraint firstItem="cF0-p2-Ibr" firstAttribute="leading" secondItem="VEw-RC-i2Q" secondAttribute="trailing" constant="16" id="xxE-yz-IMb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="friendImageView" destination="VEw-RC-i2Q" id="7zh-G5-SlZ"/>
                                             <outlet property="friendName" destination="cF0-p2-Ibr" id="wFq-Uf-Sl7"/>
+                                            <outlet property="friendRequestStatus" destination="Ohs-fi-nm0" id="Fbn-35-vxf"/>
+                                            <outlet property="phoneIcon" destination="PNT-ni-Oym" id="a3w-Uw-Aob"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -145,17 +167,21 @@
                             <constraint firstItem="8Ia-5R-fds" firstAttribute="trailing" secondItem="i9v-Wn-IaG" secondAttribute="trailing" constant="16" id="Dw5-fm-c2a"/>
                             <constraint firstItem="i9v-Wn-IaG" firstAttribute="top" secondItem="i5i-tM-5rT" secondAttribute="bottom" constant="8" id="HAo-Vw-TGY"/>
                             <constraint firstAttribute="bottom" secondItem="i9v-Wn-IaG" secondAttribute="bottom" id="RpM-5b-oAd"/>
-                            <constraint firstItem="i5i-tM-5rT" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" constant="55" id="WqE-mA-UaJ"/>
-                            <constraint firstItem="J60-9s-OVK" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" constant="8" id="XeE-ip-A0V"/>
+                            <constraint firstItem="i5i-tM-5rT" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" priority="998" constant="63" id="TWF-jp-N9K"/>
+                            <constraint firstItem="i5i-tM-5rT" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" priority="999" constant="55" id="WqE-mA-UaJ"/>
+                            <constraint firstItem="J60-9s-OVK" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" priority="999" constant="8" id="XeE-ip-A0V"/>
                             <constraint firstItem="8Ia-5R-fds" firstAttribute="trailing" secondItem="ogg-QN-mIK" secondAttribute="trailing" constant="16" id="YIM-Rw-JZH"/>
                             <constraint firstItem="ogg-QN-mIK" firstAttribute="firstBaseline" secondItem="J60-9s-OVK" secondAttribute="firstBaseline" id="b0b-w2-PPY"/>
                             <constraint firstItem="i9v-Wn-IaG" firstAttribute="leading" secondItem="8Ia-5R-fds" secondAttribute="leading" constant="16" id="bpq-lL-Pj7"/>
                             <constraint firstItem="i5i-tM-5rT" firstAttribute="leading" secondItem="i9v-Wn-IaG" secondAttribute="leading" id="l9b-Bh-kl0"/>
+                            <constraint firstItem="J60-9s-OVK" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" priority="998" constant="16" id="prw-HN-mp0"/>
                             <constraint firstItem="J60-9s-OVK" firstAttribute="centerX" secondItem="jtw-YT-jcn" secondAttribute="centerX" id="s2K-NF-7OJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8Ia-5R-fds"/>
                     </view>
                     <connections>
+                        <outlet property="careTeamLabelTopConstraint" destination="TWF-jp-N9K" id="wKa-Df-sz6"/>
+                        <outlet property="carefriendsTitleLabelTopConstraint" destination="prw-HN-mp0" id="ffU-Nl-z9U"/>
                         <outlet property="friendsTableView" destination="i9v-Wn-IaG" id="8Wr-sP-VqL"/>
                     </connections>
                 </viewController>
@@ -165,7 +191,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="iconfinder_12_-_Plus_1815561" width="512" height="512"/>
-        <image name="plus" width="64" height="64"/>
+        <image name="add" width="512" height="512"/>
+        <image name="hang-up" width="512" height="512"/>
+        <image name="phone-big" width="512" height="512"/>
     </resources>
 </document>
