--- a/Pillo/Base.lproj/Main.storyboard
+++ b/Pillo/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Calling View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="CallingViewController" customModule="Pillo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" id="BYZ-38-t0r" customClass="CallingViewController" customModule="Pillo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -45,6 +45,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" image="hang-up"/>
+                                <connections>
+                                    <action selector="hangUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GeP-dE-fm4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -63,6 +66,7 @@
                     </view>
                     <connections>
                         <outlet property="animationViewContainer" destination="9D5-GK-Iyn" id="kwW-XY-Zvz"/>
+                        <outlet property="friendNameLabel" destination="hpa-Ae-Wkt" id="hLS-je-cPE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -183,6 +187,7 @@
                         <outlet property="careTeamLabelTopConstraint" destination="TWF-jp-N9K" id="wKa-Df-sz6"/>
                         <outlet property="carefriendsTitleLabelTopConstraint" destination="prw-HN-mp0" id="ffU-Nl-z9U"/>
                         <outlet property="friendsTableView" destination="i9v-Wn-IaG" id="8Wr-sP-VqL"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="callFriend" id="NEd-YL-d08"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W7q-Mp-Dg3" userLabel="First Responder" sceneMemberID="firstResponder"/>
