--- a/Pillo/Base.lproj/Main.storyboard
+++ b/Pillo/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YfM-5A-Nre">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YfM-5A-Nre">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,25 +11,25 @@
         <!--Calling View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController modalTransitionStyle="crossDissolve" id="BYZ-38-t0r" customClass="CallingViewController" customModule="Pillo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="BYZ-38-t0r" customClass="CallingViewController" customModule="Pillo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sofia Walker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hpa-Ae-Wkt">
-                                <rect key="frame" x="115.66666666666669" y="60" width="183" height="35"/>
+                                <rect key="frame" x="115.66666666666669" y="40" width="183" height="35"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calling..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wik-g1-Y5a">
-                                <rect key="frame" x="173.66666666666666" y="103" width="67" height="19"/>
+                                <rect key="frame" x="173.66666666666666" y="83" width="67" height="19"/>
                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9D5-GK-Iyn">
-                                <rect key="frame" x="84" y="142" width="246" height="246"/>
+                                <rect key="frame" x="84" y="122" width="246" height="246"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="9D5-GK-Iyn" secondAttribute="height" multiplier="1:1" id="dLu-Au-2eT"/>
@@ -80,7 +78,7 @@
         <!--Answering View Controller-->
         <scene sceneID="QGR-nL-Apw">
             <objects>
-                <viewController modalTransitionStyle="crossDissolve" id="W9a-r5-5ks" customClass="AnsweringViewController" customModule="Pillo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="W9a-r5-5ks" customClass="AnsweringViewController" customModule="Pillo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fmz-wz-wL5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -89,13 +87,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dr. Richardson" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2WA-71-2d8">
-                                <rect key="frame" x="107" y="28" width="200" height="20"/>
+                                <rect key="frame" x="107" y="8" width="200" height="20"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6CX-Uq-AT6">
-                                <rect key="frame" x="179.66666666666666" y="56" width="55" height="28"/>
+                                <rect key="frame" x="179.66666666666666" y="36" width="55" height="28"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lp2-P8-yBN">
                                         <rect key="frame" x="0.0" y="0.0" width="55" height="28"/>
@@ -116,7 +114,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iEv-zL-lXO">
-                                <rect key="frame" x="323" y="28" width="75" height="120"/>
+                                <rect key="frame" x="323" y="8" width="75" height="120"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wox-oA-sEA">
                                         <rect key="frame" x="0.0" y="0.0" width="75" height="120"/>
@@ -230,13 +228,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carefriends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J60-9s-OVK">
-                                <rect key="frame" x="162.66666666666666" y="28" width="89" height="17.666666666666671"/>
+                                <rect key="frame" x="162.66666666666666" y="8.0000000000000018" width="89" height="17.666666666666671"/>
                                 <fontDescription key="fontDescription" name="ArialHebrew-Bold" family="Arial Hebrew" pointSize="16"/>
                                 <color key="textColor" red="0.082352941176470587" green="0.082352941176470587" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ogg-QN-mIK">
-                                <rect key="frame" x="374" y="39.666666666666664" width="24" height="24"/>
+                                <rect key="frame" x="374" y="19.666666666666668" width="24" height="24.000000000000004"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="24" id="93p-tp-77K"/>
                                     <constraint firstAttribute="height" constant="24" id="z47-x8-vRX"/>
@@ -244,37 +242,37 @@
                                 <state key="normal" image="add"/>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i9v-Wn-IaG">
-                                <rect key="frame" x="16" y="96.666666666666686" width="382" height="639.33333333333326"/>
+                                <rect key="frame" x="16" y="76.666666666666686" width="382" height="659.33333333333326"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendCell" rowHeight="65" id="tVE-6R-pAA" customClass="CareFriendTableViewCell" customModule="Pillo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="382" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tVE-6R-pAA" id="YSO-lA-GiK">
-                                            <rect key="frame" x="0.0" y="0.0" width="382" height="64.666666666666671"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="382" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VEw-RC-i2Q">
-                                                    <rect key="frame" x="16" y="10.333333333333336" width="44" height="44"/>
+                                                    <rect key="frame" x="16" y="10.666666666666664" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="A7s-gQ-1lc"/>
                                                         <constraint firstAttribute="width" constant="44" id="Vyv-hw-Nbl"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="friend name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cF0-p2-Ibr">
-                                                    <rect key="frame" x="76" y="13.333333333333336" width="240" height="19"/>
+                                                    <rect key="frame" x="76" y="13.666666666666664" width="240" height="19"/>
                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                                     <color key="textColor" red="0.082352941176470587" green="0.082352941176470587" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ohs-fi-nm0">
-                                                    <rect key="frame" x="76" y="35.333333333333336" width="240" height="16"/>
+                                                    <rect key="frame" x="76" y="35.666666666666664" width="240" height="16"/>
                                                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                     <color key="textColor" red="0.47843137254901957" green="0.53725490196078429" blue="0.56862745098039214" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone-big" translatesAutoresizingMaskIntoConstraints="NO" id="PNT-ni-Oym">
-                                                    <rect key="frame" x="332" y="17.333333333333329" width="30" height="30"/>
+                                                    <rect key="frame" x="332" y="17.666666666666671" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="6zq-SL-9hw"/>
                                                         <constraint firstAttribute="width" constant="30" id="Fwj-cL-gr2"/>
@@ -310,7 +308,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CARE TEAM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5i-tM-5rT">
-                                <rect key="frame" x="16" y="75" width="70" height="13.666666666666671"/>
+                                <rect key="frame" x="16" y="55" width="148" height="13.666666666666671"/>
                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="12"/>
                                 <color key="textColor" red="0.50980392156862742" green="0.56470588235294117" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -327,6 +325,7 @@
                             <constraint firstItem="8Ia-5R-fds" firstAttribute="trailing" secondItem="ogg-QN-mIK" secondAttribute="trailing" constant="16" id="YIM-Rw-JZH"/>
                             <constraint firstItem="ogg-QN-mIK" firstAttribute="firstBaseline" secondItem="J60-9s-OVK" secondAttribute="firstBaseline" id="b0b-w2-PPY"/>
                             <constraint firstItem="i9v-Wn-IaG" firstAttribute="leading" secondItem="8Ia-5R-fds" secondAttribute="leading" constant="16" id="bpq-lL-Pj7"/>
+                            <constraint firstItem="8Ia-5R-fds" firstAttribute="trailing" secondItem="i5i-tM-5rT" secondAttribute="trailing" constant="250" id="eJI-Zj-jc4"/>
                             <constraint firstItem="i5i-tM-5rT" firstAttribute="leading" secondItem="i9v-Wn-IaG" secondAttribute="leading" id="l9b-Bh-kl0"/>
                             <constraint firstItem="J60-9s-OVK" firstAttribute="top" secondItem="8Ia-5R-fds" secondAttribute="top" priority="998" constant="24" id="prw-HN-mp0"/>
                             <constraint firstItem="J60-9s-OVK" firstAttribute="centerX" secondItem="jtw-YT-jcn" secondAttribute="centerX" id="s2K-NF-7OJ"/>
